# Faster_OpenCV_4_Raspberry_Pi

./: .gitignore  .travis.yml  LICENSE  OpenCV-4.1.0-armv7l-dev.deb  OpenCV-4.1.0-armv7l-licenses.deb  OpenCV-4.1.0-armv7l-main.deb  OpenCV-4.1.0-armv7l-python.deb  OpenCV-4.1.0-armv7l-scripts.deb  README.md  build_information.txt
debs/: OpenCV-4.1.0-armv7l-dev.deb  OpenCV-4.1.0-armv7l-licenses.deb  OpenCV-4.1.0-armv7l-main.deb  OpenCV-4.1.0-armv7l-python.deb  OpenCV-4.1.0-armv7l-scripts.deb  OpenCV-4.1.1-armv7l-dev.deb  OpenCV-4.1.1-armv7l-licenses.deb  OpenCV-4.1.1-armv7l-main.deb  OpenCV-4.1.1-armv7l-python.deb  OpenCV-4.1.1-armv7l-scripts.deb  OpenCV-4.2.0-armv7l-dev.deb  OpenCV-4.2.0-armv7l-licenses.deb  OpenCV-4.2.0-armv7l-main.deb  OpenCV-4.2.0-armv7l-python.deb  OpenCV-4.2.0-armv7l-scripts.deb  OpenCV-4.4.0-armv7l-dev.deb  OpenCV-4.4.0-armv7l-licenses.deb  OpenCV-4.4.0-armv7l-main.deb  OpenCV-4.4.0-armv7l-python.deb  OpenCV-4.4.0-armv7l-scripts.deb
examples/cpp/: CMakeLists.txt  main.cpp
examples/python/: draw_contours.py
test/: test.py
tests/cpp/: CMakeLists.txt  main.cpp
tests/cpp_opencv_test/: main.cpp
tests/python/: tests.py
tests/python_opencv_test/: test.py
